# wapico

./: .dockerignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
Docker/celery/: Dockerfile  celery-worker.sh
Docker/django/: Dockerfile  docker-entrypoint.sh  env  run_celery_scheduler.sh  run_celery_worker.sh  run_django.sh  run_flower.sh
Docker/nginx/: .htpasswd  Dockerfile  nginx.conf
Docker/postgres/: Dockerfile  env  init.sql
templates/: nav.html  send.html  task_view.html
templates/task/: list.html  task_view.html
templates/whatsapp/: create.html
wapico/: asgi.py  celery.py  extras.py  forms.py  mock_server.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
wapico/schedule/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
wapico/schedule/migrations/: 0001_initial.py  0002_delete_schedule.py
wapico/task/: apps.py  forms.py  tasks.py  urls.py  views.py
wapico/task/templatetags/: extras.py
wapico/templates/: base.html  flower_header.html  nav.html
wapico/templates/schedule/: create.html  delete.html  list.html
wapico/templates/task/: send.html  task_view.html
wapico/templates/var/: list.html
wapico/templates/whatsapp/: delete.html  list.html
wapico/var/: admin.py  apps.py  models.py  urls.py  validators.py  views.py
wapico/var/fixtures/: data.json  var_init.json
wapico/var/migrations/: 0001_initial.py  0002_alter_var_name.py  0003_alter_var_value.py  0004_alter_var_value.py
wapico/whatsapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
wapico/whatsapp/migrations/: 0001_initial.py  (+3 more)
(+3 files in other folders)
