[tool.poetry]
name = "wapico"
version = "0.1.0"
description = ""
authors = ["Yuriy Kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
dj-database-url = "^1.2.0"
django-extensions = "^3.2.1"
django-bootstrap4 = "^22.3"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
django-celery-beat = "^2.4.0"
django = "^4.1.5"
celery = "^5.2.7"
redis = "^4.4.2"
sqlalchemy = "^2.0.0"
requests = "^2.28.2"
django-celery-results = "^2.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
